# autoware.universe

./: .pre-commit-config.yaml  packages_above.repos
.github/workflows/: pre-commit-lite.yaml
common/autoware_agnocast_wrapper/: CMakeLists.txt  package.xml
common/autoware_agnocast_wrapper/cmake/: agnocast_wrapper_config_extras.cmake
common/autoware_agnocast_wrapper/include/autoware_agnocast_wrapper/: autoware_agnocast_wrapper.hpp
common/autoware_component_interface_specs_universe/: CHANGELOG.rst  package.xml
common/autoware_component_interface_tools/: CHANGELOG.rst  package.xml
common/autoware_component_interface_utils/: CHANGELOG.rst  package.xml
common/autoware_cuda_dependency_meta/: CHANGELOG.rst  package.xml
common/autoware_fake_test_node/: CHANGELOG.rst  package.xml
common/autoware_glog_component/: CHANGELOG.rst  package.xml
common/autoware_goal_distance_calculator/: CHANGELOG.rst  package.xml
common/autoware_grid_map_utils/: CHANGELOG.rst  package.xml
common/autoware_path_distance_calculator/: CHANGELOG.rst  package.xml
common/autoware_polar_grid/: CHANGELOG.rst  package.xml
common/autoware_time_utils/: CHANGELOG.rst  package.xml
common/autoware_traffic_light_recognition_marker_publisher/: CHANGELOG.rst  package.xml
common/autoware_traffic_light_utils/: CHANGELOG.rst
common/autoware_universe_utils/: CHANGELOG.rst  package.xml
common/tier4_api_utils/: CHANGELOG.rst  package.xml
control/autoware_autonomous_emergency_braking/: CHANGELOG.rst  CMakeLists.txt  package.xml
control/autoware_collision_detector/: CHANGELOG.rst  CMakeLists.txt  package.xml
control/autoware_control_command_gate/: CHANGELOG.rst
control/autoware_control_performance_analysis/: CHANGELOG.rst  package.xml
control/autoware_control_validator/: CHANGELOG.rst  package.xml
control/autoware_external_cmd_selector/: CHANGELOG.rst  package.xml
control/autoware_joy_controller/: CHANGELOG.rst  package.xml
control/autoware_lane_departure_checker/: CHANGELOG.rst  package.xml
control/autoware_mpc_lateral_controller/: CHANGELOG.rst  package.xml
control/autoware_obstacle_collision_checker/: CHANGELOG.rst  package.xml
control/autoware_operation_mode_transition_manager/: CHANGELOG.rst  package.xml
control/autoware_pid_longitudinal_controller/: CHANGELOG.rst  package.xml
control/autoware_predicted_path_checker/: CHANGELOG.rst  package.xml
control/autoware_pure_pursuit/: CHANGELOG.rst  package.xml
control/autoware_shift_decider/: CHANGELOG.rst  package.xml
control/autoware_smart_mpc_trajectory_follower/: CHANGELOG.rst  package.xml
control/autoware_spheric_collision_detector/: CHANGELOG.rst  package.xml
control/autoware_stop_mode_operator/: CHANGELOG.rst  package.xml
control/autoware_trajectory_follower_base/: CHANGELOG.rst  package.xml
control/autoware_trajectory_follower_node/: CHANGELOG.rst  README.md
control/autoware_vehicle_cmd_gate/: CHANGELOG.rst  package.xml
e2e/autoware_tensorrt_vad/: CHANGELOG.rst  CMakeLists.txt  package.xml
evaluator/autoware_control_evaluator/: CHANGELOG.rst  package.xml
evaluator/autoware_evaluation_adapter/: CHANGELOG.rst  package.xml
evaluator/autoware_kinematic_evaluator/: CHANGELOG.rst  package.xml
evaluator/autoware_localization_evaluator/: CHANGELOG.rst  package.xml
evaluator/autoware_perception_online_evaluator/: CHANGELOG.rst  CMakeLists.txt
evaluator/autoware_planning_evaluator/: CHANGELOG.rst  package.xml
evaluator/autoware_scenario_simulator_v2_adapter/: CHANGELOG.rst  package.xml
examples/autoware_diagnostic_graph_test_examples/: CHANGELOG.rst  package.xml
latest/: 404.html  index.html  sitemap.xml
latest/CODE_OF_CONDUCT/: index.html
latest/CONTRIBUTING/: index.html
latest/DISCLAIMER/: index.html
localization/autoware_geo_pose_projector/: CHANGELOG.rst  package.xml
localization/autoware_localization_error_monitor/: CHANGELOG.rst  package.xml
localization/autoware_pose2twist/: CHANGELOG.rst  package.xml
localization/autoware_pose_covariance_modifier/: CHANGELOG.rst  package.xml
localization/autoware_pose_estimator_arbiter/: CHANGELOG.rst  package.xml
localization/autoware_pose_instability_detector/: CHANGELOG.rst  package.xml
main/: 404.html  index.html  sitemap.xml
main/CODE_OF_CONDUCT/: index.html
main/CONTRIBUTING/: index.html
main/DISCLAIMER/: index.html
main/search/: search_index.json
map/autoware_map_tf_generator/: CHANGELOG.rst  package.xml
perception/autoware_bevfusion/: CHANGELOG.rst  CMakeLists.txt
perception/autoware_bytetrack/: CHANGELOG.rst  package.xml
perception/autoware_camera_streampetr/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
perception/autoware_cluster_merger/: CHANGELOG.rst  package.xml
perception/autoware_compare_map_segmentation/: CHANGELOG.rst
perception/autoware_detection_by_tracker/: CHANGELOG.rst
perception/autoware_predicted_path_postprocessor/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
perception/autoware_predicted_path_postprocessor/config/: predicted_path_postprocessor.param.yaml
perception/autoware_predicted_path_postprocessor/docs/: refine_penetration_by_static_objects.md
perception/autoware_predicted_path_postprocessor/include/autoware/predicted_path_postprocessor/processor/: builder.hpp  collision.hpp  interpolation.hpp  refine_by_speed.hpp  refine_penetration_by_static_objects.hpp
perception/autoware_predicted_path_postprocessor/schema/: predicted_path_postprocessor.schema.json
perception/autoware_predicted_path_postprocessor/src/processor/: collision.cpp  interpolation.cpp  refine_by_speed.cpp  refine_penetration_by_static_objects.cpp
perception/autoware_predicted_path_postprocessor/test/: test_collision.cpp  test_refine_penetration_by_static_objects.cpp
perception/autoware_tensorrt_classifier/: CHANGELOG.rst  CMakeLists.txt  package.xml
planning/: .pages
planning/motion_velocity_planner/autoware_motion_velocity_planner_node_universe/: CMakeLists.txt  package.xml
planning/motion_velocity_planner/autoware_motion_velocity_planner_node_universe/src/: node.cpp  node.hpp
(+1049 files in other folders)
